# nav_simulation

./: .gitignore
gazebo_simulation/: CMakeLists.txt  README.md  package.xml
gazebo_simulation/config/sentry2026/: gz_spawn_params.yaml  ros_gz_bridge.yaml
gazebo_simulation/launch/: robot_bringup.launch.py  simulation_bringup.launch.py  world_bringup.launch.py
gazebo_simulation/meshes/sentry2026/: gimbal_pitch_lower_link.STL  gimbal_pitch_upper_link.STL  gimbal_yaw_small_link.STL
gazebo_simulation/robots/: sentry2026.urdf.xacro
gazebo_simulation/rviz/: default.rviz
gazebo_simulation/worlds/: empty.sdf
gazebo_simulation/worlds/rmuc2026/: gui.config  world.sdf
scripts/: all_kill.sh
